# robotito

./: Branch_notes  Recap.docx  RobotitoProject.sublime-workspace
V2/: Partlist030618Amazon.xlsx  PartsToOrder.xlsx  Recap.docx  RobotitoProject.sublime-workspace  readme.txt
V2/Adafruit-Motor-HAT-Python-Library/: .gitignore  README.md
V2/Adafruit-Motor-HAT-Python-Library/.github/: PULL_REQUEST_TEMPLATE.md
V2/Adafruit-Motor-HAT-Python-Library/Adafruit_MotorHAT/: __init__.py
V2/Adafruit-Motor-HAT-Python-Library/examples/: DCTest.py  Robot.py  StackingTest.py
V2/Parts/: AAbattery.STL  CameraBACK.blend  CameraEnclosure.blend  Miniwheels.blend  Miniwheels.blend1  SensorHolderTotal.blend  SensorHolderTotal.blend1  StandOffs.blend  WheelTotal.blend1
V2/Parts/ReadyToPrint STL Files/: CameraBack.stl  (+4 more)
V2/Robotito/: MotorDriver.py  MotorEncoderTest.py  Sensors.py
V2/RobotitoParts/: CameraEnclosure.blend1  SensorHolderTotal.stl  WheelTotal.blend1  robotitochassis.blend
V2/Software/: monitor-Michael’s MacBook Pro.py
V2/python-spi/: setup.py
V2/rosRobotitoPackage/: CMakeLists.txt  package.xml
V3/: PartsToOrder.xlsx
V3/Parts/: AAbattery.STL  Camera Front.blend  SensorHolder.blend  WheelTotal.blend  chassis.blend1
V3/Pictures/: 2018-09-11_18-21-18-0400.heic  2018-09-11_18-58-59-0400.heic  2018-09-11_19-36-10-0400.heic
V3/Schematics/: Robotito.fzz
V3/rosRobotitoPackage/: package.xml
cfg/: stingray1.yaml  stingray2_calibration.yaml
launch/: pose_detector.launch
partbuy/: partlist2.xls  partlistMike.xls
src/: pose_publisher.py  wall_publisher.py
(+12 files in other folders)
