<package format="2">
  <name>robotito</name>
  <version>1.2.4</version>
  <description>
  This package is an interfacce for the Robotito(v.2) and ROS
  </description>
  <maintainer email="mdegrande@mail.usf.edu">Michael DeGrande</maintainer>
  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>roscpp</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>

  <doc_depend>doxygen</doc_depend>
</package>